# MEDFLOW

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
Validation_Reports/: benchmark_report.html  benchmark_results.json  test_report.json
alembic/: README.md  env.py
alembic/versions/: 20260325_0001_persistence_alignment.py  20260520_0002_add_appointments_table.py
app/: main.py
app/api/: deps.py  router.py
app/api/routes/: admin.py  appointments.py  auth.py  consultations.py  dashboard.py  health.py  llm.py  (+5 more)
app/core/: config.py  constants.py  exceptions.py  logging.py  security.py
app/docs/: architecture.md
app/prompts/: clinical_report_generation_v2.md  suggestive_mode_v2.md  suggestive_mode_v3.md  template.md  transcript_normalization_v1.md
app/scripts/: download_whisper_model.py  seed_mysql_db.py  start.ps1
app/templates/: base.html
app/tests/: conftest.py
docs/: architecture.md  contributing.md  email-setup.md  modules.md  suggestive-mode-implementation-guide.md  testing.md
docs/diagrams/: architecture.puml  deployment.puml  sequence.puml  use_case_diagram.puml
overleaf-report/: .gitignore  GITHUB_OVERLEAF.md  README.md  editable-report.tex  latexmkrc  main.tex
overleaf-report/config/: metadata.tex  preamble.tex
overleaf-report/frontmatter/: titlepage.tex
overleaf-report/sections/: 01-executive-summary.tex  02-system-overview.tex  03-architecture.tex  04-implementation.tex  05-testing-validation.tex  06-conclusion.tex  appendix-generated-reports.tex
scripts/: generate_test_graphs.py  generate_test_report.py
whisper_api/: Dockerfile  __init__.py  main.py  models.py  pyproject.toml  service.py
(+106 files in other folders)
