[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opd-vertex"
version = "0.1.0"
description = "Local-first outpatient department platform."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "jinja2>=3.1.6,<4.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "pydantic-settings>=2.10.1,<3.0.0",
  "python-multipart>=0.0.20,<1.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "reportlab>=4.0.0",
  # HTTP Client
  "httpx>=0.28.1,<1.0.0",
  # SQL
  "sqlalchemy>=2.0.0,<3.0.0",
  "pymysql>=1.1.0,<2.0.0",
  "alembic>=1.13.0,<2.0.0",
  "cryptography>=42.0.0,<43.0.0",
  # NoSQL
  "pymongo>=4.6.0,<5.0.0",
  # Auth
  "bcrypt>=4.1.0,<5.0.0",
  "python-jose>=3.3.0,<4.0.0",
  "passlib>=1.7.4,<2.0.0",
  "faster-whisper>=0.10.0",
  "soundfile>=0.12.1",
  "numpy>=1.23.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.1,<1.0.0",
  "pytest>=8.4.1,<9.0.0",
  "plotext>=5.3.0,<6.0.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]

[tool.setuptools]
packages = ["app"]
