[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-api"
version = "1.0.0"
description = "Whisper API microservice for speech-to-text transcription."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "pydantic>=2.0.0,<3.0.0",
  "uvicorn[standard]>=0.35.0,<1.0.0",
  "faster-whisper>=0.10.0",
  "soundfile>=0.12.1",
  "numpy>=1.23.0",
  "scipy>=1.10.0",
  "webrtcvad>=2.0.10",
]

[tool.setuptools]
packages = ["whisper_api"]
